[project]
name = "langgraph-research-agent"
version = "0.1.0"
description = "A multi-agent research pipeline built with LangGraph and exposed via FastAPI."
requires-python = ">=3.13"

dependencies = [
    "langgraph>=1.1.3",
    "langchain-core>=1.2.22",
    "langchain-groq>=1.1.2",
    "langchain-tavily>=0.2.17",
    "fastapi>=0.118.2",
    "uvicorn>=0.37.0",
    "python-dotenv>=1.1.0",
]

[project.scripts]
#start = "uvicorn api:app --reload --port 8000"
